--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <section class="ae-container-fluid rk-main">
   <app-portafolio></app-portafolio>
   <app-about></app-about>
+  <app-producto></app-producto>
 </section>
 <app-footer></app-footer>
