--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <section class="ae-container-fluid rk-main">
-  <app-portafolio></app-portafolio>
+  <!--app-portafolio></app-portafolio>
   <app-about></app-about>
-  <app-producto></app-producto>
+  <app-producto></app-producto-->
+   <router-outlet></router-outlet>
 </section>
 <app-footer></app-footer>
