se cambio un error

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@ Multiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
 
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation"  style="width: 50%" class="active text-center"><a href="#comprarAro" aria-controls="comprarAro" role="tab" data-toggle="tab">
-                <b class="titulosDetalles">Comprar por auto</b></a></li>
+                <b class="titulosDetalles">Comprar por auto 1</b></a></li>
 
               <li role="presentation" class="text-center"  style="width: 50%"><a href="#comprarMedida" aria-controls="comprarMedida" role="tab" data-toggle="tab">
                 <b class="titulosDetalles">Comprar por medida</b></a></li>
