--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <div class="row pad-50">
     <div class="col-md-4 bloque1 ">
-      <h1 class="nuestros-servicios"><b>Nuestro Servicio</b></h1>
+      <h1 class="nuestros-servicios"><b>Nuestro Servicio 1</b></h1>
       <p>Nos encargamos de todo para que cambies tus neumáticos sin moverte de casa.
 Multiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
     </div>
