se agrega servicio region

--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -52,7 +52,16 @@
                         <option value="4">4 </option>
                     </select>
                   </div>
-
+                  <div class="form-group required">
+                    <label for="">Ciudad </label>
+                    <select class="form-control" id="input-select" name="input-select">
+                      <option value="">. </option>
+                      <option value="1">1 </option>
+                      <option value="2">2 </option>
+                      <option value="3">3 </option>
+                      <option value="4">4 </option>
+                    </select>
+                  </div>
                    <div class="form-group required">
                     <label for="">Comuna </label>
                       <select class="form-control" id="input-select" name="input-select">
