--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -44,22 +44,16 @@
 
                   <div class="form-group required">
                     <label for="">Región </label>
-                      <select class="form-control" id="input-select" name="input-select">
-                        <option value="">. </option>
-                        <option value="1">1 </option>
-                        <option value="2">2 </option>
-                        <option value="3">3 </option>
-                        <option value="4">4 </option>
+                      <select class="form-control" id="input-select" name="input-select" (ngModel)="regionSeleccion" (ngModelChange)="cambiaCiudad=$event">
+                        <option *ngFor="let region of _is.regiones" value="{{region[0]}}">{{region[1]}}</option>
+                       
                     </select>
                   </div>
                   <div class="form-group required">
                     <label for="">Ciudad </label>
-                    <select class="form-control" id="input-select" name="input-select">
-                      <option value="">. </option>
-                      <option value="1">1 </option>
-                      <option value="2">2 </option>
-                      <option value="3">3 </option>
-                      <option value="4">4 </option>
+                    <select *ngIf="_is.ciudades.length > 0" class="form-control" id="input-select" name="input-select">
+                      <option  *ngFor="let ciudad of _is.ciudades" value="{{ciudad[0]}}">{{ciudad[1]}}</option>
+                      
                     </select>
                   </div>
                    <div class="form-group required">
