se agrega servicio y se avanza con categoria no filtrada 2

--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -250,7 +250,7 @@
                     <h4><a href="producto.html"> {{producto[0]}} {{producto[1]}} </a></h4>
                     <div>
                       <ul class="lista-producto">
-                          <li>Ancho: 145</li>
+                          <li>Ancho: {{producto[5]}}</li>
                           <li> Pefil: </li>
                           <li>Aro: 13</li>
                           <li>Indice de carga: KUMHO</li>
