se termina funcionalidades de categorias (ambas)

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -48,15 +48,15 @@ Multiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
                   <div>
                   <div class="form-group">
                     <label for="ancho">Ancho</label>
-                    <input type="text" class="form-control" id="ancho" placeholder="ancho" [(ngModel)]="ancho">
+                    <input type="text" class="form-control" id="ancho" [(ngModel)]="ancho">
                   </div>
                   <div class="form-group">
                     <label for="perfil">Perfil</label>
-                    <input type="text" class="form-control" id="perfil" placeholder="perfil" [(ngModel)]="perfil">
+                    <input type="text" class="form-control" id="perfil"  [(ngModel)]="perfil">
                   </div>
                   <div class="form-group">
                     <label for="aro">Aro</label>
-                    <input type="text" class="form-control" id="aro" placeholder="aro" [(ngModel)]="aro">
+                    <input type="text" class="form-control" id="aro" [(ngModel)]="aro">
                   </div>
 
                   <button type="button" (click)="btnBuscarClick(2)" class="btn btn-default bremsen btn-lg"><b>BUSCAR</b></button>
