--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -2,8 +2,8 @@
     <div class="container">
       <!-- Breadcrumb Start-->
       <ul class="breadcrumb">
-        <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-        <li><a href="#">Pagina actual</a></li>
+        <li><a routerLink="/home"><i class="fa fa-home"></i></a></li>
+        <li><a routerLink="/categoria">Pagina actual</a></li>
       </ul>
       <!-- Breadcrumb End-->
 
@@ -17,6 +17,12 @@
           <div class="pad"></div>
           <h3 class="subtitle">Marca</h3>
           <div class="box-category">
+            <div class="radio">
+                <label>
+                  <input type="radio" name="filtromarcamodel" (click)="filtroMarca()">&nbsp;&nbsp;
+                  Todas
+                </label>
+              </div>
               <div class="radio" *ngFor="let marca of detallesCategoria.todasMarcas">
                 <label>
                   <input type="radio" [value]="marca" name="filtromarcamodel" (click)="filtroMarca(marca)">&nbsp;&nbsp;
@@ -119,6 +125,25 @@
         </div>
 
 
+        <!-- 1 -->
+<div class="loader loader--style1" title="0" *ngIf="mostrarLoading">
+  <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+  <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
+    s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634
+    c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"/>
+  <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+    C22.32,8.481,24.301,9.057,26.013,10.047z">
+    <animateTransform attributeType="xml"
+      attributeName="transform"
+      type="rotate"
+      from="0 20 20"
+      to="360 20 20"
+      dur="0.5s"
+      repeatCount="indefinite"/>
+    </path>
+  </svg>
+</div>
 
 
 
@@ -130,14 +155,13 @@
                 <label class="control-label" for="input-sort">Ordenar por:</label>
               </div>
               <div class="col-md-3 col-sm-2 text-right">
-                <select id="input-sort" class="form-control col-sm-3" (change)="ordenadorProductos()" name="ordenador" [(ngModel)]="detallesCategoria.marca">
-                  <option value="" selected="selected">Todos</option>
-                  <option value="marca1">Marca (A - Z)</option>
+                <select id="input-sort" class="form-control col-sm-3" (change)="ordenadorProductos()" name="ordenador" [(ngModel)]="detallesCategoria.order">
+                  <option value="marca1" selected="selected">Marca (A - Z)</option>
                   <option value="marca2">Marca (Z - A)</option>
                   <option value="precio1">Precio (Mas Bajo)</option>
                   <option value="precio2">Precio (Mas Alto)</option>
                   <option value="modelo1">Modelo (A - Z)</option>
-                  <option value="modelo">Modelo (Z - A)</option>
+                  <option value="modelo2">Modelo (Z - A)</option>
                 </select>
               </div>
 
@@ -223,21 +247,57 @@
 
       </div>
               </div>
+
+                <div class="collapse" id="carro" style="text-align: left !important;" aria-expanded="true">
+                      <div class="well">
+                        <br>
+                        <div class="col-md-12 text-right">
+                          <h3>Sumando al carro</h3>
+                          <hr>
+                        </div>
+
+                         <div class="col-md-3 col-sm-12">
+                             <img src="image/product/540x576.jpg" width="220px" alt=" Strategies for Acquiring Your Own Laptop " title="" class="img-responsive">
+                        </div>
+
+                        <div class="col-md-3 col-sm-12">
+                            <h4>Marca modelo</h4>
+                              <ul class="lista-producto">
+                                <li>Medida: 24 145 7h</li>
+                                <li>SKU: 653fg54</li>
+                                <li>Cantidad: 4</li>
+
+                            </ul>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <button type="button" class="btn btn-default ">Seguir comprando </button>
+                             <button type="button" class="btn btn-default ">Seguir comprando </button>
+                        </div>
+
+                      </div>
+         </div>
+
+
+
             </div>
-
-
           </div>
 
 
 
           <div class="row">
-            <div class="col-sm-6 text-left">
+            <div class="col-sm-6 text-left" style="margin-top: -18px;">
               <ul class="pagination">
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">&gt;</a></li>
-                <li><a href="#">&gt;|</a></li>
+                <li *ngFor="let item of resultProductos | paginate: { itemsPerPage: itemsPerPage, currentPage: p }"></li>
               </ul>
+              <pagination-controls (pageChange)="pageChanged($event)"
+                                  maxSize="9"
+                      directionLinks="true"
+                      autoHide="true"
+                      previousLabel="Previo"
+                      nextLabel="Siguiente"
+                      screenReaderPaginationLabel="Paginación"
+                      screenReaderPageLabel="Página"
+                      screenReaderCurrentLabel="Tu estas en esta página"></pagination-controls>
             </div>
             <div class="col-sm-6 text-right">Mostrando {{ detallesCategoria.inicio}} - {{ detallesCategoria.fin}} de {{detallesCategoria.totalProductos}} Productos</div>
           </div>
